force-app/main/default/objects/Registered_ABN_Name__c/Registered_ABN_Name__c.object-meta.xml
<CustomObject>
    <label>Registered ABN Name</label>
    <nameField>
        <label>ABN Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered ABN Names</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>