force-app/main/default/objects/Registered_ABN_Name__c/fields/ABN_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>ABN_Entity_Type__c</fullName>
    <label>ABN Entity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>