force-app/main/default/objects/Registered_ABN_Name__c/fields/ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>ABN_Number__c</fullName>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>