force-app/main/default/objects/Registered_ABN_Name__c/fields/ACNC_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>ACNC_Registration_Status__c</fullName>
    <label>ACNC Registration Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>