force-app/main/default/objects/Registered_ABN_Name__c/fields/ACNC_Registration_Status_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>ACNC_Registration_Status_Effective_From__c</fullName>
    <label>ACNC Registration Status Effective From</label>
    <type>Date</type>
</CustomField>