force-app/main/default/objects/Registered_ABN_Name__c/fields/GPMS_ABN_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>GPMS_ABN_Unique_ID__c</fullName>
    <description>Unique id for Registered ABN Object</description>
    <externalId>true</externalId>
    <label>ABN Unique ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>