force-app/main/default/objects/Registered_ABN_Name__c/fields/IsUpdateABNFunction__c.field-meta.xml
<CustomField>
    <fullName>IsUpdateABNFunction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used by the Update ABN function to make changes to the ABN Entity name.</description>
    <label>Is Update ABN Function</label>
    <type>Checkbox</type>
</CustomField>