force-app/main/default/objects/Registered_ABN_Name__c/fields/Registered_for_GST__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_GST__c</fullName>
    <label>Registered for GST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>